--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
+    "build:azure": "NITRO_PRESET=azure nuxt build",
+    "build:azure:win": "set NITRO_PRESET=azure&nuxt build",
     "dev": "nuxt dev",
+    "swa:build": "swa start .output/public --api-location .output/server",
     "generate": "nuxt generate",
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@azure/static-web-apps-cli": "^1.0.2",
+    "azure-functions-core-tools": "^4.0.4653",
     "nuxt": "3.0.0-rc.6"
   }
 }
