Test in firebase

--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "build:azure": "NITRO_PRESET=azure nuxt build",
-    "build:azure:win": "set NITRO_PRESET=azure&nuxt build",
+    "fb:build:win": "set NITRO_PRESET=firebase&yarn build",
+    "fb:emu:start": "firebase emulators:start",
+    "fb:deploy": "firebase --debug deploy",
     "dev": "nuxt dev",
-    "swa:build": "swa start .output/public --api-location .output/server",
     "generate": "nuxt generate",
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@azure/static-web-apps-cli": "^1.0.2",
-    "azure-functions-core-tools": "^4.0.4653",
+    "firebase-admin": "^11.0.1",
+    "firebase-functions": "^3.22.0",
+    "firebase-functions-test": "^2.2.0",
+    "firebase-tools": "^11.4.0",
     "nuxt": "3.0.0-rc.6"
   }
 }
