--- a/firebase.json
+++ b/firebase.json
@@ -4,6 +4,6 @@
     "site": "testdeleteme-7a825",
     "public": ".output/public",
     "cleanUrls": true,
-    "rewrites": [{ "source": "**", "function": "server" }],
+    "rewrites": [{ "source": "**", "function": "server" }]
   }
 }
