--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
+    "fb:build": "NITRO_PRESET=firebase yarn build",
     "fb:build:win": "set NITRO_PRESET=firebase&yarn build",
     "fb:emu:start": "firebase emulators:start",
     "fb:deploy": "firebase --debug deploy",
