--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "@azure/static-web-apps-cli": "^1.0.2",
     "azure-functions-core-tools": "^4.0.4653",
     "firebase": "^9.9.3",
-    "nuxt": "3.0.0-rc.6"
+    "nuxt": "npm:nuxt3@latest"
   }
 }
